syntax = "proto3";
package mazeio;

// Interface exported by the server
service Game {

    // Simple RPC
    // Send my player object, get the maze layout
    rpc ConnectPlayer(JoinGameRequest) returns (JoinGameResponse);

    // Bidirectional Streaming RPC
    // client sends directions
    // server sends the list of players repeatedly with updates
    rpc StreamGame(stream InputDirection) returns (stream Player);
}

enum CellType {
    OPEN = 0;
    WALL = 1;
}

message Maze {
    uint32 width = 1;
    uint32 height = 2;
    repeated CellType cells = 3;
}

message Position {
    uint32 x = 1;
    uint32 y = 2;
}

message Player {
    string id = 1;
    string name = 2;
    Position pos = 3;
}

message JoinGameRequest {
    string name = 1;
}

message JoinGameResponse {
    string player_id = 1;
    Maze maze = 2;
    repeated Player players = 3;
}

enum Direction {
    LEFT = 0;
    RIGHT = 1;
    UP = 2;
    DOWN = 3;
}

message InputDirection {
    Direction direction = 1;
}
